# notomattic

./: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
