[package]
name = "notomattic"
version = "0.1.1"
description = "A privacy-first note-taking app"
authors = ["Notomattic Team"]
license = "UNLICENSED"
repository = "https://github.com/mauropereiira/notomattic"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "notomattic_lib"
crate-type = ["lib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-rs = { version = "1.0", features = ["build"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
dirs = "5.0"
chrono = "0.4"
regex = "1"
lazy_static = "1.4"

[target.'cfg(target_os = "macos")'.dependencies]
swift-rs = "1.0"
